fixed images, overlay, spacing on create account menu and create reviewer / application pages

--- a/react-app/ccf/src/pages/create-acc-applicants/CreateAccApplicant.css
+++ b/react-app/ccf/src/pages/create-acc-applicants/CreateAccApplicant.css
@@ -29,6 +29,9 @@
   width: 50%;
   padding-top: 2%;
   padding-bottom: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .image-placeholder2 {
@@ -36,6 +39,47 @@
   border-radius: 10px;
   margin-right: 5%;
   height: 100%;
+}
+
+.images-container {
+  position: relative;
+  width: 72%;
+  height: 78vh;
+  min-height: 70vh;
+  max-height: 78vh;
+  margin: 0 auto;
+  border-radius: 5px;
+}
+
+.stacked-images {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+}
+
+.research-image {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+
+.yellow-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.overlay-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.5;
 }
 
 .logo2 {
