--- a/react-app/ccf/src/pages/create-acc-reviewer/CreateAccReviewer.css
+++ b/react-app/ccf/src/pages/create-acc-reviewer/CreateAccReviewer.css
@@ -31,14 +31,18 @@
   width: 50%;
   padding-top: 2%;
   padding-bottom: 2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .images-container {
   position: relative;
-  width: 80%;
-  height: 100%;
-  min-height: 90vh;
-  margin-right: 5%;
+  width: 72%;
+  height: 78vh;
+  min-height: 70vh;
+  max-height: 78vh;
+  margin: 0 auto;
   border-radius: 5px;
 }
 
